fix: align PRO icon with text in upgrade button changes in less file

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -895,6 +895,10 @@ a.wpuf-button.button-upgrade-to-pro {
     border-radius: 5px;
     text-decoration: none;
     border: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    white-space: nowrap;
 }
 
 .pro-field-overlay a.wpuf-button.button-upgrade-to-pro {
@@ -910,8 +914,14 @@ a.wpuf-button.button-upgrade-to-pro:hover {
     background: #d07805;
 }
 
+span.pro-icon {
+    display: inline-flex;
+    align-items: center;
+}
+
 span.pro-icon svg {
     height: 1em;
+    margin-left: 5px;
 }
 
 span.pro-icon.icon-white svg path {
